WIP, need to address infinite looping in onwidth, onheight, onborder, onpadding handlers

--- a/spec/features/inputtext.html
+++ b/spec/features/inputtext.html
@@ -46,6 +46,28 @@
       nameinput.setAttribute('height', 50);
     </handler>
   </labelbutton>
+
+  <labelbutton id="borderbtn" text="borderify">
+    <handler event="onclick">
+      nameinput.setAttribute('border-width', 2);
+      //nameinput.setAttribute('border-top-width', 2);
+      //nameinput.setAttribute('border-bottom-width', 3);
+      //nameinput.setAttribute('border-left-width', 1);
+      //nameinput.setAttribute('border-right-width', 4);
+    </handler>
+  </labelbutton>
+
+  <labelbutton id="paddingbtn" text="paddingfy">
+    <handler event="onclick">
+      nameinput.setAttribute('padding', 2);
+      //nameinput.setAttribute('padding-top', 1);
+      //nameinput.setAttribute('padding-bottom', 4);
+      //nameinput.setAttribute('padding-left', 8);
+      //nameinput.setAttribute('padding-right', 2);
+    </handler>
+  </labelbutton>
+
+
 </view>
 
 </body>
