--- a/smoke/bitmapbutton.html
+++ b/smoke/bitmapbutton.html
@@ -31,6 +31,10 @@
   <script type="text/javascript" src="/layout.js"></script>
   <script type="text/javascript" src="/lib/chai.js"></script>
   <script type="text/javascript" src="/lib/smoke_helper.js"></script>
+  
+  <script>
+    window.dr.resource = true
+  </script>
 </head>
 <body>
 
@@ -256,6 +260,100 @@
       this.setAttribute('clicktracker', this.clicktracker+1)  
     </handler>
   </bitmapbutton>
+
+  <!-- Declarative state syntax -->
+  <!-- Default states, should maintain the default interactivity -->
+  <bitmapbutton width="100" height="100">
+    <handler event="oninit">
+      assert.testCaseLabel = 'Declarative syntax, default states';
+      assert.equal(this._statesArray.join(','), 'default,over,down', 'states should be default,over,down')
+      assert.equal(this.state, 'default', 'state is default by default')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('default.png'), -1, 'default state image is default image')
+      this.setAttribute('state', 'over')
+      assert.equal(this.state, 'over', 'state is over after its been set to over')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('over.png'), -1, 'over state image is over image')
+      this.setAttribute('state', 'down')
+      assert.equal(this.state, 'down', 'state is down after its been set to down')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('down.png'), -1, 'down state image is down image')
+
+      $(this.sprite.el).trigger('mouseover')
+      assert.equal(this.state, 'over', 'Interactive 1: should be over')
+      $(this.sprite.el).trigger('mousedown')
+      assert.equal(this.state, 'down', 'Interactive 2: should be down')
+      $(this.sprite.el).trigger('mouseout')
+      assert.equal(this.state, 'default', 'Interactive 3: should be default')
+      $(this.sprite.el).trigger('mouseup')
+      assert.equal(this.state, 'default', 'Interactive 4: should be default II')
+    </handler>
+    
+    <resource url="./default.png" state="default"></resource>
+    <resource url="./over.png" state="over"></resource>
+    <resource url="./down.png" state="down"></resource>
+  </bitmapbutton>
+
+  <!-- Override states -->
+  <bitmapbutton width="100" height="100">
+    <handler event="oninit">
+      assert.testCaseLabel = 'Declarative syntax, override states';
+      assert.equal(this._statesArray.join(','), 'one,two,three,four', 'states should be overridden with one,two,three,four')
+      assert.equal(this.state, 'one', 'default state should be one (first in list)')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('default.png'), -1, 'one state image is default image')
+      this.setAttribute('state', 'two')
+      assert.equal(this.state, 'two', 'state is two after its been set to two')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('over.png'), -1, 'two state image is over image')
+      this.setAttribute('state', 'three')
+      assert.equal(this.state, 'three', 'state is three after its been set to three')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('down.png'), -1, 'three state image is down image')
+      this.setAttribute('state', 'four')
+      assert.equal(this.state, 'four', 'state is four after its been set to four')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('shoarma.jpg'), -1, 'four state image is shoarma image')
+
+      this.setAttribute('state', 'one')
+      $(this.sprite.el).trigger('mouseover')
+      assert.equal(this.state, 'one', 'state should not change on mouseover')
+    </handler>
+
+    <resource url="./default.png" state="one"></resource>
+    <resource url="./over.png" state="two"></resource>
+    <resource url="./down.png" state="three"></resource>
+    <resource url="./shoarma.jpg" state="four"></resource>
+  </bitmapbutton>
+
+  <!-- Additional states -->
+  <bitmapbutton width="100" height="100">
+    <handler event="oninit">
+      assert.testCaseLabel = 'Declarative syntax, Additional states';
+      assert.equal(this._statesArray.join(','), 'default,over,down,four', 'states should be overridden with default,over,down,four')
+      assert.equal(this.state, 'default', 'state is default by default')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('default.png'), -1, 'default state image is default image')
+      this.setAttribute('state', 'over')
+      assert.equal(this.state, 'over', 'state is over after its been set to over')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('over.png'), -1, 'over state image is over image')
+      this.setAttribute('state', 'down')
+      assert.equal(this.state, 'down', 'state is down after its been set to down')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('down.png'), -1, 'down state image is down image')
+      this.setAttribute('state', 'four')
+      assert.equal(this.state, 'four', 'state is four after its been set to four')
+      assert.notEqual(this.sprite.el.style.backgroundImage.indexOf('shoarma.jpg'), -1, 'four state image is shoarma image')
+
+      this.setAttribute('state', 'default')
+      
+      $(this.sprite.el).trigger('mouseover')
+      assert.equal(this.state, 'over', 'Interactive 1: should be over')
+      $(this.sprite.el).trigger('mousedown')
+      assert.equal(this.state, 'down', 'Interactive 2: should be down')
+      $(this.sprite.el).trigger('mouseout')
+      assert.equal(this.state, 'default', 'Interactive 3: should be default')
+      $(this.sprite.el).trigger('mouseup')
+      assert.equal(this.state, 'default', 'Interactive 4: should be default II')
+    </handler>
+
+    <resource url="./default.png" state="default"></resource>
+    <resource url="./over.png" state="over"></resource>
+    <resource url="./down.png" state="down"></resource>
+    <resource url="./shoarma.jpg" state="four"></resource>
+  </bitmapbutton>
+  
   
 </view>
 <!-- The MIT License (MIT)
